# Census_Income_Classifier

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  audit_Census_Income_Classifier_v02.md  check_imports.py  environment.yml  paths.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/artifacts/: X_test_enc.npz  X_test_sensitive.csv  calibration_from_score_quantile.csv  export_meta.json  fairness_threshold_scan.csv  group_metrics_t_star.csv  metrics_t050_vs_tstar.csv  results_df.csv  selection_rates_t_star.csv  threshold_optimizer_compare.csv  threshold_scan.csv
data/models/: results_summary.csv
data/processed/: adult_eda.parquet
docs/: audit_Census_Income_Classifier_v02_new.md  audit_Census_Income_Classifier_v03.md  audit_Census_Income_Classifier_v04.02.md  audit_Census_Income_Classifier_v04.md  audit_Census_Income_Classifier_v05.md  audit_Census_Income_Classifier_v06.md  release_manifest_full.csv
docs/ruff_checks/: ruff_check.txt  ruff_check_v02.txt  ruff_check_v03.txt  ruff_check_v04.txt  ruff_check_v05.txt  ruff_check_v06.txt  ruff_check_v07.txt  ruff_check_v08.txt  ruff_check_v09.txt  ruff_check_v10.txt  ruff_check_v11.txt  ruff_check_v12.txt  ruff_check_v13.txt  ruff_check_v15.txt
models/: LGBM_best.joblib  model_best.joblib
notebooks/: 01_data_loading_and_eda.ipynb  02_modeling.ipynb  03_fairness_and_explainability.ipynb
notebooks/Russian/: 01_data_loading_and_eda_rus.ipynb  02_modeling_rus.ipynb  03_fairness_and_explainability_rus.ipynb
notebooks/artifacts/: X_test_sensitive.csv  feature_names_after_preproc.csv  results_df.csv
notebooks/predictions/: preds_pipeline.csv
src/models/: __init__.py  infer.py
tests/: conftest.py  test_infer_cli.py  test_infer_func.py  test_preprocessing.py
tools/: check_imports.py  fix_hardcoded_paths.py  purge_history.sh
(+17 files in other folders)
