[project]
name = 'census-income-classifier'
version = '0.0.0'
description = 'ML pipeline for UCI Adult (Census Income)'
readme = 'README.md'
license = { text = 'MIT' }
requires-python = '>3.10'

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
(
  ^/.git
| ^/.venv
| ^/venv
| ^/env
| ^/.mypy_cache
| ^/.pytest_cache
| ^/data
| ^/reports
| ^/notebooks
)
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# what to check
select = ["E", "F", "I", "B", "UP"]
# nothing ignored right now
ignore = []

[tool.ruff.lint.isort]
# make import sorter aware of our package
known-first-party = ["src"]