[project]
name = "census_income_classifier"
version = "0.1.0"
description = "Reproducible ML pipeline for UCI Adult (Census Income) with fairness and explainability analysis."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Ivan Polishchuk" }]
[project.urls]
Homepage = "https://github.com/Vanargo/Census_Income_Classifier"
Source = "https://github.com/Vanargo/Census_Income_Classifier"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
namespaces = false

[tool.black]
line-length = 100
target-version = ["py310"]
exclude = '''
(
  ^/.git
| ^/.venv
| ^/venv
| ^/env
| ^/.mypy_cache
| ^/.pytest_cache
| ^/.ruff_cache
| ^/data
| ^/reports
| ^/notebooks
)
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"